fix for legend being squished

--- a/demo/css/app-styles.css
+++ b/demo/css/app-styles.css
@@ -4457,11 +4457,14 @@ a.milestone-date:hover {
   padding-bottom: 10px;
   padding-left: 20px;
   padding-top: 10px;
-  margin: 0;
+  margin: 2px 0 0 5px;
   position: relative;
   float:left;
 }
 
+.skill-legend {
+  min-width: 200px!important;
+}
 .status-competent {
   background-color: #33CC66;
 }
